2013-01-04  Tony Chang  <tony@chromium.org>

        Remove some autogenerated settings from InternalSettings.idl
        https://bugs.webkit.org/show_bug.cgi?id=106114

        Reviewed by Ojan Vafai.

        Rename setters to match the name in Settings.in
        setEnableCompositingForFixedPosition -> setAcceleratedCompositingForFixedPositionEnabled
        setEnableCompositingForScrollableFrames -> setAcceleratedCompositingForScrollableFramesEnabled

        * compositing/absolute-inside-out-of-view-fixed.html:
        * compositing/geometry/fixed-position-composited-page-scale-down.html:
        * compositing/geometry/fixed-position-composited-page-scale-scroll.html:
        * compositing/geometry/fixed-position-composited-page-scale-smaller-than-viewport.html:
        * compositing/geometry/fixed-position-composited-page-scale.html:
        * compositing/geometry/fixed-position-composited-switch.html:
        * compositing/geometry/fixed-position-iframe-composited-page-scale-down.html:
        * compositing/geometry/fixed-position-iframe-composited-page-scale.html:
        * compositing/geometry/fixed-position-transform-composited-page-scale-down.html:
        * compositing/geometry/fixed-position-transform-composited-page-scale.html:
        * compositing/layer-creation/fixed-position-out-of-view-scaled-iframe-scroll.html:
        * compositing/layer-creation/fixed-position-out-of-view-scaled-iframe.html:
        * compositing/layer-creation/fixed-position-out-of-view-scaled-scroll.html:
        * compositing/layer-creation/fixed-position-out-of-view-scaled.html:
        * compositing/layer-creation/fixed-position-out-of-view-scroll-reason.html:
        * compositing/layer-creation/fixed-position-out-of-view.html:
        * compositing/overflow/automatically-opt-into-composited-scrolling.html:
        * platform/chromium/compositing/force-compositing-mode/force-composite-empty.html: